--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -39,7 +39,11 @@
 		</section>
     </header>
     <main>
-        <div class="container">Test</div>
+        <div class="container">
+            <div class="grid">
+
+            </div>
+        </div>
     </main>
     <footer>
     	<section class="top">
