Grid and Tile Updates

--- a/index.html
+++ b/index.html
@@ -41,7 +41,32 @@
     <main>
         <div class="container">
             <div class="grid">
-
+                <div class="tile-3-tablet-landscape">
+                    <article>
+                        <h3 class="bar top text-left text-uppercase"><span>Meow!</span></h3>
+                        <p>Some more text about the site...</p>
+                    </article>
+                </div>
+                <div class="tile-9-mobile-landscape">
+                    <article>
+                        <h1 class="bar middle text-center text-uppercase"><span>Awesome new page</span></h1>
+                        <p>Some breif text about the site...</p>
+                    </article>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="tile-9-mobile-landscape">
+                    <article>
+                        <h1 class="bar middle text-center text-uppercase"><span>Awesome new page</span></h1>
+                        <p>Some breif text about the site...</p>
+                    </article>
+                </div>
+                <div class="tile-3-tablet-landscape">
+                    <article>
+                        <h3 class="bar bottom text-right text-uppercase"><span>Meow!</span></h3>
+                        <p>Some more text about the site...</p>
+                    </article>
+                </div>
             </div>
         </div>
     </main>
