Header Bar Defaults, Added Ribbon

--- a/index.html
+++ b/index.html
@@ -28,28 +28,60 @@
 </head>
 <body>
     <header>
-		<section class="top">
-			<div class="container">Test</div>
-		</section>
-		<section class="middle">
-			<div class="container">Test</div>
-		</section>
-		<section class="bottom">
-			<div class="container">Test</div>
-		</section>
+        <section class="top">
+            <div class="container">Test</div>
+        </section>
+        <section class="middle">
+            <div class="container">Test</div>
+        </section>
+        <section class="bottom">
+            <div class="container">Test</div>
+        </section>
     </header>
     <main>
         <div class="container">
+            <h1 class="bar bar-middle text-left bar-medium bar-primary"><span>bar bar-middle text-left bar-medium bar-primary</span></h1>
+            <h4>Options</h4>
+            <div class="grid">
+                <div class="tile-3-tablet-portrait">
+                    <ul>
+                        <li>bar-top</li>
+                        <li>bar-middle</li>
+                        <li>bar-bottom</li>
+                    </ul>
+                </div>
+                <div class="tile-3-tablet-portrait">
+                    <ul>
+                        <li>text-left</li>
+                        <li>text-center</li>
+                        <li>text-right</li>
+                    </ul>
+                </div>
+                <div class="tile-3-tablet-portrait">
+                    <ul>
+                        <li>bar-small</li>
+                        <li>bar-medium</li>
+                        <li>bar-large</li>
+                    </ul>
+                </div>
+                <div class="tile-3-tablet-portrait">
+                    <ul>
+                        <li>bar-default</li>
+                        <li>bar-priimary</li>
+                    </ul>
+                </div>
+            </div>
+
             <div class="grid">
                 <div class="tile-3-tablet-landscape">
                     <article>
-                        <h3 class="bar top text-left text-uppercase"><span>Meow!</span></h3>
-                        <p>Some more text about the site...</p>
+                        <h3 class="bar bar-top text-left bar-middle bar-primary"><span>Meow!</span></h3>
+                        <p><div class="ribbon ribbon-left ribbon-danger"><span>Special</span></div></p>
                     </article>
                 </div>
                 <div class="tile-9-mobile-landscape">
                     <article>
-                        <h1 class="bar middle text-center text-uppercase"><span>Awesome new page</span></h1>
+                        <h1 class="bar middle text-center  bar-default"><span>Awesome new page</span></h1>
                         <p>Some breif text about the site...</p>
                     </article>
                 </div>
@@ -57,13 +89,13 @@
             <div class="grid">
                 <div class="tile-9-mobile-landscape">
                     <article>
-                        <h1 class="bar middle text-center text-uppercase"><span>Awesome new page</span></h1>
+                        <h1 class="bar bar-middle text-center bar-primary"><span>Awesome new page</span></h1>
                         <p>Some breif text about the site...</p>
                     </article>
                 </div>
                 <div class="tile-3-tablet-landscape">
                     <article>
-                        <h3 class="bar bottom text-right text-uppercase"><span>Meow!</span></h3>
+                        <h3 class="bar bar-bottom text-right bar-default"><span>Meow!</span></h3>
                         <p>Some more text about the site...</p>
                     </article>
                 </div>
@@ -71,15 +103,15 @@
         </div>
     </main>
     <footer>
-    	<section class="top">
-    		<div class="container">Test</div>
-    	</section>
-    	<section class="middle">
-	    	<div class="container">Test</div>
-    	</section>
-    	<section class="bottom">
-    		<div class="container">Test</div>
-    	</section>
+        <section class="top">
+            <div class="container">Test</div>
+        </section>
+        <section class="middle">
+            <div class="container">Test</div>
+        </section>
+        <section class="bottom">
+            <div class="container">Test</div>
+        </section>
     </footer>
 </body>
 </html>
